# study_the_K-R_c_book

./: .gitignore  CMakeLists.txt  readme.md
1.10/: 1_10.c
1.7/: ex_1_7.c
1.9/: 1_9.c
1_A_Tutorial_introduction/: ex1_1.c  ex1_2.c  ex1_3.c  ex1_4.c
