cmake_minimum_required(VERSION 3.16)
project(k_r_book C)

set(CMAKE_C_STANDARD 11)

add_executable(1_1 1_A_Tutorial_introduction/ex1_1.c)
add_executable(1_2 1_A_Tutorial_introduction/ex1_2.c)
add_executable(1_3 1_A_Tutorial_introduction/ex1_3.c)


add_executable(1_7 1.7/ex_1_7.c)
add_executable(1_9 1.9/1_9.c)
add_executable(1_10 1.10/1_10.c)